add html and css

--- a/index.html
+++ b/index.html
@@ -1,1 +1,56 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div id="calculadora">
 
+        <div id="display">
+            <input type="text" class="displayField" id="result"><br>
+            <input type="text" class="displayField" id="operation">
+        </div>
+
+            <div id="teclado">
+
+                <div id="line1">
+                    <td><input class="tecla" id="teclaC" type="button" value="C"></td>
+                    <td><input class="tecla operator" type="button" value="⬅"></td>
+                    <td><input class="tecla operator" type="button" value="%"></td>
+                </div>
+
+                <div id="line2">
+                    <td><input class="tecla" type="button" value="7"></td>
+                    <td><input class="tecla" type="button" value="8"></td>
+                    <td><input class="tecla" type="button" value="9"></td>
+                    <td><input class="tecla operator" type="button" value="x"></td>
+                </div>
+
+                <div id="line3">
+                    <td><input class="tecla" type="button" value="4"></td>
+                    <td><input class="tecla" type="button" value="5"></td>
+                    <td><input class="tecla" type="button" value="6"></td>
+                    <td><input class="tecla operator" type="button" value="-"></td>
+                </div>
+
+                <div id="line4">
+                    <td><input class="tecla" type="button" value="1"></td>
+                    <td><input class="tecla" type="button" value="2"></td>
+                    <td><input class="tecla" type="button" value="3"></td>
+                    <td><input class="tecla operator" type="button" value="+"></td>
+                </div>
+
+                <div id="line5">
+                    <td><input class="tecla" id="teclaCero" type="button" value="0"></td>
+                    <td><input class="tecla" type="button" value="."></td>
+                    <td><input class="tecla operator" type="button" value="="></td>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</body>
+</html>
