--- a/calculadora.html
+++ b/calculadora.html
@@ -3,7 +3,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <style>
+
+        body {
+            font-family: 'Roboto', sans-serif;
+        }
+        h1 {
+            font-family: 'Pacifico', cursive;
+        }
         img {
             width:100%;
             
@@ -23,6 +33,6 @@
         <img src="https://images.pexels.com/photos/1404819/pexels-photo-1404819.jpeg?auto=compress&cs=tinysrgb&w=600" alt="">
     </div>
     <h2>asdfoihasdiofhaosd </h2>
-    
+    <h2>asdfasdfad</h2>
 </body>
 </html>
