--- a/index.html
+++ b/index.html
@@ -17,40 +17,41 @@
             <div id="teclado">
 
                 <div id="line1">
-                    <td><input class="tecla" id="teclaC" type="button" value="C"></td>
-                    <td><input class="tecla operator" type="button" value="⬅"></td>
-                    <td><input class="tecla operator" type="button" value="%"></td>
+                    <td><input class="clearButton" id="clearButton" type="button" value="C"></td>
+                    <td><input class="deleteButton" id="deleteButton" type="button" value="⬅"></td>
+                    <td><input class="operatorButton" type="button" value="%"></td>
                 </div>
 
                 <div id="line2">
-                    <td><input class="tecla" type="button" value="7"></td>
-                    <td><input class="tecla" type="button" value="8"></td>
-                    <td><input class="tecla" type="button" value="9"></td>
-                    <td><input class="tecla operator" type="button" value="x"></td>
+                    <td><input class="numberButton" type="button" value="7"></td>
+                    <td><input class="numberButton" type="button" value="8"></td>
+                    <td><input class="numberButton" type="button" value="9"></td>
+                    <td><input class="operatorButton" type="button" value="*"></td>
                 </div>
 
                 <div id="line3">
-                    <td><input class="tecla" type="button" value="4"></td>
-                    <td><input class="tecla" type="button" value="5"></td>
-                    <td><input class="tecla" type="button" value="6"></td>
-                    <td><input class="tecla operator" type="button" value="-"></td>
+                    <td><input class="numberButton" type="button" value="4"></td>
+                    <td><input class="numberButton" type="button" value="5"></td>
+                    <td><input class="numberButton" type="button" value="6"></td>
+                    <td><input class="operatorButton" type="button" value="-"></td>
                 </div>
 
                 <div id="line4">
-                    <td><input class="tecla" type="button" value="1"></td>
-                    <td><input class="tecla" type="button" value="2"></td>
-                    <td><input class="tecla" type="button" value="3"></td>
-                    <td><input class="tecla operator" type="button" value="+"></td>
+                    <td><input class="numberButton" type="button" value="1"></td>
+                    <td><input class="numberButton" type="button" value="2"></td>
+                    <td><input class="numberButton" type="button" value="3"></td>
+                    <td><input class="operatorButton" type="button" value="+"></td>
                 </div>
 
                 <div id="line5">
-                    <td><input class="tecla" id="teclaCero" type="button" value="0"></td>
-                    <td><input class="tecla" type="button" value="."></td>
-                    <td><input class="tecla operator" type="button" value="="></td>
+                    <td><input class="numberButton" id="teclaCero" type="button" value="0"></td>
+                    <td><input class="numberButton" type="button" value="."></td>
+                    <td><input id="equalButton" type="button" value="="></td>
                 </div>
 
             </div>
         </div>
     </div>
+    <script src="main.js"></script>
 </body>
 </html>
