--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <div id="line1">
                     <td><input class="clearButton" id="clearButton" type="button" value="C"></td>
                     <td><input class="deleteButton" id="deleteButton" type="button" value="⬅"></td>
-                    <td><input class="operatorButton" type="button" value="%"></td>
+                    <td><input class="operatorButton" type="button" value="/"></td>
                 </div>
 
                 <div id="line2">
