--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@400;700&display=swap" rel="stylesheet">
-    <title>Calculator :calculator</title>
+    <title>Calculator 🖩</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -14,6 +14,10 @@
             <input type="text" readonly class="result">
             <input type="text" readonly class="operations">
         </div>
+        <button class="button" data-value="&#40">&#40</button>
+        <button class="button" data-value="&#41">&#41</button>
+        <button class="button" data-value="%">%</button>
+        <button class="button" data-value="B">⬅</button>
         <button class="button" data-value="7">7</button>
         <button class="button" data-value="8">8</button>
         <button class="button" data-value="9">9</button>
