cambio de orden de los botones

--- a/index.html
+++ b/index.html
@@ -27,12 +27,11 @@
             <button id="number" onclick="appendInput('2')">2</button>
             <button id="number" onclick="appendInput('3')">3</button>
             <button id="symbol" onclick="appendInput('+')">+</button>
+            <button id="symbol" onclick="window.location.href='https://www.instagram.com/bortcrafter';">
+                <img src="LOGO.jpg" alt="Imagen del botón" style="max-width: 50px; max-height: 50px;"> </button>
             <button id="number" onclick="appendInput('0')">0</button>
             <button id="symbol" onclick="appendInput('.')">.</button>
             <button id="symbol" onclick="calculateResult('=')">=</button>
-            <button id="symbol" onclick="window.location.href='https://www.instagram.com/bortcrafter';">
-                <img src="LOGO.jpg" alt="Imagen del botón" style="max-width: 50px; max-height: 50px;">
-            </button>
         </div>
     </div>
     
