html and css updated

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 <body>
   <main class="">
     <section id="calculator">
-      <div class="display">
-        <h5 id="result" class="result">0</h5>
+      <div id="display">
+        <h5 id="result" class="result"></h5>
         <p id="operation" class="operation">+</p>
       </div>
       <div class="buttons-container">
-        <button id="reset" class="operationBtn">C</button>
+        <button id="clear" class="operationBtn doubleBtn">C</button>
         <button id="backspace" class="operationBtn">&#129040;</button>
         <button id="division" class="operationBtn">/</button>
         <button id="number7" class="numberBtn">7</button>
@@ -28,14 +28,14 @@
         <button id="number2" class="numberBtn">2</button>
         <button id="number3" class="numberBtn">3</button>
         <button id="plus" class="operationBtn">+</button>
-        <button id="number0" class="numberBtn">0</button>
+        <button id="number0" class="numberBtn doubleBtn">0</button>
         <button id="period" class="numberBtn">.</button>
         <button id="equal" class="operationBtn">=</button>
       </div>
     </section>
   </main>
 
-  <script src="main.js"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
