--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <section id="calculator">
       <div id="display">
         <h5 id="result" class="result"></h5>
-        <p id="operation" class="operation">+</p>
+        <p id="operation" class="operation"></p>
       </div>
       <div class="buttons-container">
-        <button id="clear" class="operationBtn doubleBtn">C</button>
+        <button id="clear" class="doubleBtn">C</button>
         <button id="backspace" class="operationBtn">&#129040;</button>
         <button id="division" class="operationBtn">/</button>
         <button id="number7" class="numberBtn">7</button>
@@ -30,7 +30,7 @@
         <button id="plus" class="operationBtn">+</button>
         <button id="number0" class="numberBtn doubleBtn">0</button>
         <button id="period" class="numberBtn">.</button>
-        <button id="equal" class="operationBtn">=</button>
+        <button id="equal" class="">=</button>
       </div>
     </section>
   </main>
