--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       </div>
       <div class="buttons-container">
         <button id="clear" class="doubleBtn">C</button>
-        <button id="backspace" class="operationBtn">&#129040;</button>
+        <button id="backspace" class="">&#129040;</button>
         <button id="division" class="operationBtn">/</button>
         <button id="number7" class="numberBtn">7</button>
         <button id="number8" class="numberBtn">8</button>
