some visual updated

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <p id="operation" class="operation"></p>
       </div>
       <div class="buttons-container">
-        <button id="clear" class="doubleBtn">C</button>
-        <button id="backspace" class="">&#129040;</button>
+        <button id="clear" class="doubleBtn">AC</button>
+        <button id="backspace" class="">C</button>
         <button id="division" class="operationBtn">/</button>
         <button id="number7" class="numberBtn">7</button>
         <button id="number8" class="numberBtn">8</button>
