--- a/calculadora.html
+++ b/calculadora.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href=".\css\calculadora.css">
 </head>
 <body onload="init();">
+    <audio id="audio" src="button.mp3"></audio>
     <table class="calculadora">
     <tr>
         <td colspan="4"><span id="resultado"></span></td>
