cambios debido a problema con el pc

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <button id="number" onclick="appendInput('0')">0</button>
             <button id="symbol" onclick="appendInput('.')">.</button>
             <button id="symbol" onclick="calculateResult('=')">=</button>
+            <img id="fuegos" src="fuegos.gif" alt="Fuegos artificiales" style="display: none;">
         </div>
     </div>
     
