--- a/index.html
+++ b/index.html
@@ -1,46 +1,45 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculadora</title>
-    <link rel="stylesheet" href="style.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+
+    <link href="style.css" rel="stylesheet">
+    <script src="index.js"></script>    
 </head>
 
-<body>
-    <h1>Calculadora Master Nuclio
-
-    </h1>
-    <h2>Por Daniel Galarza</h2>
-    <div class="calculadora">
-        <input type="text" id="pantalla" readonly>
-        <br>
-        <input type="button" value="1" onclick="agregar('1')">
-        <input type="button" value="2" onclick="agregar('2')">
-        <input type="button" value="3"onclick="agregar('3')">
-        <input type="button" value="+"onclick="agregar('+')">
-        <br>
-        <input type="button" value="4" onclick="agregar('4')">
-        <input type="button" value="5" onclick="agregar('5')">
-        <input type="button" value="6" onclick="agregar('6')">
-        <input type="button" value="-" onclick="agregar('-')">
-        <br>
-        <input type="button" value="7" onclick="agregar('7')">
-        <input type="button" value="8" onclick="agregar('8')">
-        <input type="button" value="9" onclick="agregar('9')">
-        <input type="button" value="*" onclick="agregar('*')">
-        <br>
-        <input type="button" value="0" onclick="agregar('0')">
-        <input type="button" value="." onclick="agregar('.')">
-        <input type="button" value="/" onclick="agregar('/')">
-        <input type="button" value="=" onclick="calcular('')">
-        <br>
-        <input type="button" value="C" onclick="borrar('')">
-    </div>
-
-    <script src="script.js"></script>
-</body>
-
-</html>
+-  </head>
+  <body>
+    <table>
+      <tr>
+        <td colspan="4"><button id="result">0</button></td>
+      </tr>
+      <tr>
+        <td><button onclick="add('1')">1</button></td>
+        <td><button onclick="add('2')">2</button></td>
+        <td><button onclick="add('3')">3</button></td>
+        <td><button onclick="add('+')">+</button></td>
+      </tr>
+      <tr>
+        <td><button onclick="add('4')">4</button></td>
+        <td><button onclick="add('5')">5</button></td>
+        <td><button onclick="add('6')">6</button></td>
+        <td><button onclick="add('-')">-</button></td>
+      </tr>
+      <tr>
+        <td><button onclick="add('7')">7</button></td>
+        <td><button onclick="add('8')">8</button></td>
+        <td><button onclick="add('9')">9</button></td>
+        <td><button onclick="add('*')">*</button></td>
+      </tr>
+      <tr>
+        <td colspan="3"><button onclick="add('0')">0</button></td>
+        <td colspan="3"><button onclick="add('/')">/</button></td>          
+      </tr>
+      <tr>
+        <td colspan="2"><button onclick="del()" class="ac">AC</button></td>
+        <td><button onclick="add('.')">.</button></td>
+        <td><button onclick="calc()">=</button></td>            
+      </tr>
+    </table>
+  </body>
